Pri računih lahko dodajamo ali odstranjujemo opombe
Pri računih lahko z enostavnim dvoklikom dodamo ali odstranimo opombo k
računu. Opombe se shranijo k računu.
ureja #49

--- a/opombepriracunih.ui
+++ b/opombepriracunih.ui
@@ -109,6 +109,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>txt_id</tabstop>
+  <tabstop>txt_naslov</tabstop>
+  <tabstop>txt_besedilo</tabstop>
+  <tabstop>btn_sprejmi</tabstop>
+  <tabstop>btn_izhod</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
