--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -91,6 +91,29 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>15</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>15</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 170, 255);
+background-color: rgb(255, 170, 255);
+border:0;</string>
+        </property>
         <property name="text">
          <string>Pomen se bo pokazal s časom</string>
         </property>
