Potni nalogi - tiskanje - pravilen izpis dnevnic
Dodano novo okno za vpis šifranta kilometrine. Dodano novo okno šifranta
za vpis cene dnevnic. Posodobljeno okno za vnos potnih nalogov - omogoča
pregled cen dnevnic in kilometrine. Posodobljen tisk potnih nalogov, ki
sedaj omogoča tisk tudi dveh različnih tipov dnevnic na istem računu.
Popravljene so decimalne pike v decimalne vejice.
Uporabnik lahko v tabelarnih pregledih izbere več vrstic (potnih nalogov,
računov, prejetih računov) in jih natisne. Natisnejo se zgolj izbrani
dokumenti. Urejene nove mape za tiskanje računov.
closes #31

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -195,6 +195,9 @@ border:0;</string>
      <string>Šifranti</string>
     </property>
     <addaction name="actionOpombe_pri_ra_unih"/>
+    <addaction name="separator"/>
+    <addaction name="actionKilometrina"/>
+    <addaction name="actionDnevnice"/>
    </widget>
    <addaction name="menuDelo"/>
    <addaction name="menuRa_unovodstvo"/>
@@ -280,6 +283,16 @@ border:0;</string>
   <action name="actionOpombe_pri_ra_unih">
    <property name="text">
     <string>Opombe pri računih</string>
+   </property>
+  </action>
+  <action name="actionKilometrina">
+   <property name="text">
+    <string>Kilometrina</string>
+   </property>
+  </action>
+  <action name="actionDnevnice">
+   <property name="text">
+    <string>Dnevnice</string>
    </property>
   </action>
  </widget>
