--- a/potninalogi.ui
+++ b/potninalogi.ui
@@ -72,7 +72,7 @@
             <item row="2" column="0">
              <widget class="QLabel" name="label_3">
               <property name="text">
-               <string>Datum naloga</string>
+               <string>Datum izdaje naloga</string>
               </property>
              </widget>
             </item>
@@ -140,7 +140,7 @@
        <item row="0" column="1">
         <widget class="QGroupBox" name="groupBox_8">
          <property name="title">
-          <string>Priloge (vsaka v svojo vrstico</string>
+          <string>Priloge (vsaka v svojo vrstico)</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
